--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,11 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 app-*.tar
 
-# Ignore assets that are produced by build tools.
-/priv/static/assets/
+# # Ignore assets that are produced by build tools.
+# /priv/static/assets/
 
-# Ignore digested assets cache.
-/priv/static/cache_manifest.json
+# # Ignore digested assets cache.
+# /priv/static/cache_manifest.json
 
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
